Using_a_DynamoDB_Table_Basic_I-O/infrastructure.yml
AWSTemplateFormatVersion: 2010-09-09
Description: DDB Lab 01
Resources:
  DDBVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
  PubSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref DDBVPC
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
  DDBIGW:
    Type: 'AWS::EC2::InternetGateway'
    Properties: {}
  IGWAttach:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref DDBVPC
      InternetGatewayId: !Ref DDBIGW
  DDBVPCRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref DDBVPC
  DDBRtblAssoc:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PubSubnet
      RouteTableId: !Ref DDBVPCRouteTable
  ToTheWorld:
    Type: 'AWS::EC2::Route'
    DependsOn: DDBIGW
    Properties:
      RouteTableId: !Ref DDBVPCRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref DDBIGW
  WorkInstanceSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allows SSH Access to DDB Admin instance
      VpcId: !Ref DDBVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  Ec2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-015d9d29a292958e5
      InstanceType: t2.micro
      UserData: !Base64 
        'Fn::Join':
          - ''
          - - |
              #!/bin/bash
            - |
              /bin/echo 'dw*Ti59h' | /bin/passwd cloud_user --stdin
            - |
              yum update -y
            - >
              yum install -y python36 python36-devel python36-pip
              python36-virtualenv
            - |
              pip-3.6 install boto3
            - |
              pip install --upgrade pip
            - |
              ln -s /usr/local/bin/pip /usr/bin/pip
            - |
              /usr/local/bin/pip install --upgrade awscli
            - |
              /usr/local/bin/pip install boto3
            - |
              mkdir /home/cloud_user/.aws
            - |
              echo '[default]
              region = us-east-1' > /home/cloud_user/.aws/config
            - >
              curl
              https://raw.githubusercontent.com/linuxacademy/content-dynamodb-deepdive/master/labs/BasicIO/confirmlab.py
              > /home/cloud_user/confirmlab.py
            - >
              curl
              https://raw.githubusercontent.com/linuxacademy/content-dynamodb-deepdive/master/labs/BasicIO/confirmlabfinal.py
              > /home/cloud_user/confirmlabfinal.py
            - |
              mkdir /home/cloud_user/util
            - >
              curl
              https://raw.githubusercontent.com/linuxacademy/content-dynamodb-deepdive/master/labs/csvconverter.py
              > /home/cloud_user/util/csvconverter.py
            - >
              curl
              https://raw.githubusercontent.com/linuxacademy/content-dynamodb-deepdive/master/labs/batchupdate.py
              > /home/cloud_user/util/batchupdate.py
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: '0'
          GroupSet:
            - !Ref WorkInstanceSG
          SubnetId: !Ref PubSubnet
      IamInstanceProfile: !Ref DDBAdminProfile
  PetTable:
    Type: 'AWS::DynamoDB::Table'
    Properties:
      AttributeDefinitions:
        - AttributeName: pet_species
          AttributeType: S
        - AttributeName: pet_id
          AttributeType: 'N'
      KeySchema:
        - AttributeName: pet_species
          KeyType: HASH
        - AttributeName: pet_id
          KeyType: RANGE
      TableName: PetInventory
      BillingMode: PAY_PER_REQUEST
  AccessKey:
    Type: 'AWS::IAM::AccessKey'
    Properties:
      UserName: cloud_user
  DDBAdminRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess'
  DDBAdminProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Roles:
        - !Ref DDBAdminRole
Outputs:
  pubIpAddress1:
    Description: Public IP address of Bastion Host
    Value: !GetAtt 
      - Ec2Instance
      - PublicIp
